fix: replace list access with Java 8 API usage